--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   http: ^0.13.5
+  window_manager: ^0.2.8
 
 dev_dependencies:
   flutter_lints: ^2.0.0
