--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   http: ^0.13.5
-  window_manager: ^0.2.8
+  intl: ^0.18.0
+  loading_indicator: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  msix: ^3.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -80,3 +82,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+msix_config:
+  display_name: Self Service
+  publisher_display_name: PT Imperium Happy Puppy
+  identity_name: ihp.ilhmdhn.selfservice
+  msix_version: 1.0.0.0
+  logo_path: D:\source code\self_service.png
+  capabilities: internetClient, location, microphone, webcam
