--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.18.0
   loading_indicator: ^3.1.0
+  window_manager: ^0.2.8
 
 dev_dependencies:
   flutter_lints: ^2.0.0
