--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_svg: ^1.1.6
   http: ^0.13.5
   intl: ^0.18.0
   shared_preferences: ^2.0.15
