--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  dropdown_search: ^5.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
