--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_svg: ^1.1.6
+  flutter_widget_from_html_core: ^0.9.1
   http: ^0.13.5
   intl: ^0.18.0
   shared_preferences: ^2.0.15
