--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.18.0
   shared_preferences: ^2.0.15
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
