--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=3.0.0 <3.10.2'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,22 +33,23 @@ dependencies:
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
-  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_cache_manager: ^3.3.0
   flutter_svg: ^1.1.6
   flutter_widget_from_html_core: ^0.9.1
-  http: ^0.13.5
+  google_fonts: ^4.0.3
+  http: ^0.13.0
+  infinite_scroll_pagination: ^3.2.0
   intl: ^0.18.0
   shared_preferences: ^2.0.15
-  infinite_scroll_pagination: ^3.2.0
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  msix: ^3.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,6 +62,8 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+    - assets/video/welcome.mp4
+    - assets/images/background_reservation_page.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -88,10 +91,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-msix_config:
-  display_name: Self Service
-  publisher_display_name: PT Imperium Happy Puppy
-  identity_name: ihp.ilhmdhn.selfservice
-  msix_version: 1.0.0.0
-  logo_path: D:\source code\self_service.png
-  capabilities: internetClient, location, microphone, webcam
