--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/video/welcome.mp4
     - assets/images/background_reservation_page.jpg
     - assets/icon/
+    - assets/data_test/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
