--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   flutter_svg: ^1.1.6
   flutter_widget_from_html_core: ^0.9.1
+  fluttertoast: ^8.2.2
   google_fonts: ^4.0.3
   http: ^0.13.0
   infinite_scroll_pagination: ^3.2.0
