--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_cache_manager: ^3.3.0
+  flutter_dotenv: ^5.1.0
   flutter_svg: ^1.1.6
   flutter_widget_from_html_core: ^0.9.1
   fluttertoast: ^8.2.2
@@ -66,6 +67,7 @@ flutter:
     - assets/video/welcome.mp4
     - assets/icon/
     - assets/data_test/
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
