--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
+  circular_countdown_timer: ^0.2.3
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_cache_manager: ^3.3.0
+  flutter_countdown_timer: ^4.1.0
   flutter_dotenv: ^5.1.0
   flutter_svg: ^1.1.6
   flutter_widget_from_html_core: ^0.9.1
@@ -45,7 +47,9 @@ dependencies:
   http: ^0.13.0
   infinite_scroll_pagination: ^3.2.0
   intl: ^0.18.0
+  qr_flutter: ^4.1.0
   shared_preferences: ^2.0.15
+  slide_countdown: ^1.0.1
   video_player: ^2.6.1
 
 dev_dependencies:
@@ -66,6 +70,7 @@ flutter:
     - assets/images/
     - assets/video/welcome.mp4
     - assets/icon/
+    - assets/icon/payment/
     - assets/data_test/
     - .env
   # To add assets to your application, add an assets section, like this:
